--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,11 @@
         </activity>
         <activity android:name=".AdminActivity">
         </activity>
-        <activity android:name=".SignUpActivity">
+        <activity android:name=".DealActivity">
         </activity>
         <activity android:name=".AuthenticationActivity">
         </activity>
-        <activity android:name=".WelcomeActivity">
+        <activity android:name=".ListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
